ecommerse-nodejs-server-master/ecommerse-nodejs-server-master/k8-manifests/dispatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx3
spec:
  selector:
    app: nginx3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
