ecommerse-nodejs-server-master/ecommerse-nodejs-server-master/k8-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx3
  namespace: apps
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/request-timeout: "60"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    appgw.ingress.kubernetes.io/connection-draining: "true"

spec:
  rules:
    - host: api-ecom.myarts.live
      http:
        paths:
        - path: /
          backend:
            service:
              name: nginx3
              port:
                number: 80
          pathType: Exact
